[gd_scene load_steps=2 format=3 uid="uid://b6hyqkgiravev"]

[ext_resource type="Script" path="res://scripts/menus/options_menu.gd" id="1_lxfb0"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxfb0")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.429167
anchor_top = 0.0666667
anchor_right = 0.566667
anchor_bottom = 0.143519
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "OPTIONS"
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -308.0
offset_right = 384.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -20.0
offset_right = 63.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreenButton" type="CheckButton" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen
"

[node name="StartMenuButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -88.0
offset_right = 273.0
offset_bottom = -30.0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "START MENU"

[connection signal="pressed" from="Panel/VBoxContainer/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="Panel/StartMenuButton" to="." method="_on_start_menu_button_pressed"]
